helloworld/templates/deployment.yaml
# helloworld/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: harixcode/hello-world-app:v1
          ports:
            - containerPort: 80
