helloworld/templates/service.yaml
# helloworld/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  type: NodePort 
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30776
