helloworld/templates/ingress.yaml
# helloworld/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 10.108.37.178
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: helloworld
                port:
                  number: 80
